# cli-xtask

./: .editorconfig  .gitignore  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  README.md  README.tpl  build.rs  codecov.yml  deny.toml  release.toml
.github/: PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: audit.yml  cd.yml  ci.yml  update-deps.yml
doc/: README.md  cargo-xtask-build.md  cargo-xtask-clippy.md  cargo-xtask-dist-archive.md  cargo-xtask-dist-build-bin.md  cargo-xtask-dist-build-completion.md  cargo-xtask-dist-build-doc.md  cargo-xtask-dist-build-license.md  cargo-xtask-dist-build-man.md  cargo-xtask-dist-build-readme.md  cargo-xtask-dist-build.md  cargo-xtask-dist-clean.md  cargo-xtask-dist.md  cargo-xtask-doc.md  cargo-xtask-docsrs.md  cargo-xtask-exec.md  cargo-xtask-fmt.md  cargo-xtask-help.md  cargo-xtask-lint.md  cargo-xtask-pre-release.md  cargo-xtask-rdme.md  cargo-xtask-sync-rdme.md  cargo-xtask-test.md  cargo-xtask-tidy.md  cargo-xtask-udeps.md  cargo-xtask.md
examples/bin-main/: Cargo.toml  README.md
examples/bin-main-with-command/: Cargo.toml  LICENSE-MIT  README.md
examples/bin-main-with-command/src/: lib.rs  main.rs
examples/bin-main-with-command/xtask/: Cargo.toml  README.md
examples/bin-main-with-command/xtask/src/: main.rs
examples/bin-main/xtask/: Cargo.toml  README.md
examples/bin-main/xtask/src/: main.rs
examples/bin-with-command/: Cargo.toml  README.md
examples/bin-with-command/xtask/: Cargo.toml
examples/bin-with-command/xtask/src/: main.rs
examples/lib-main/: Cargo.toml  README.md
examples/lib-main/src/: lib.rs
examples/lib-main/xtask/: Cargo.toml  README.md
examples/lib-main/xtask/src/: main.rs
examples/simple/: Cargo.toml
examples/simple-bin/src/: main.rs
examples/simple-bin/xtask/: Cargo.toml
examples/simple-bin/xtask/src/: main.rs
examples/simple/xtask/: Cargo.toml
examples/virtual-workspace-main/: Cargo.toml  README.md
examples/virtual-workspace-main/app1/: Cargo.toml  README.md
examples/virtual-workspace-main/app2/: Cargo.toml  README.md
examples/virtual-workspace-main/xtask/: Cargo.toml  README.md
examples/virtual-workspace-main/xtask/src/: main.rs
examples/with_command/: Cargo.toml
examples/with_command/src/: lib.rs  main.rs
examples/with_command/xtask/: Cargo.toml
examples/with_command/xtask/src/: main.rs
src/: archive.rs  args.rs  cargo.rs  command.rs  config.rs  error_handler.rs  fs.rs  lib.rs  logger.rs  macros.rs  main.rs  process.rs  subcommand.rs  workspace.rs
src/command/: build.rs  build_bin.rs  build_completion.rs  build_doc.rs  build_license.rs  build_man.rs  clippy.rs  dist.rs  dist_archive.rs  dist_build.rs  dist_build_bin.rs  dist_build_completion.rs  dist_build_doc.rs  dist_build_license.rs  dist_build_man.rs  dist_build_readme.rs  dist_clean.rs  exec.rs  fmt.rs  lint.rs  main.rs  rdme.rs  test.rs  udeps.rs
src/config/: dist.rs  dist_package.rs  dist_target.rs  package.rs  target.rs
src/subcommand/: build.rs  clippy.rs  dist.rs  dist_archive.rs  dist_build.rs  dist_build_bin.rs  dist_build_completion.rs  dist_build_doc.rs  dist_build_license.rs  dist_build_man.rs  dist_build_readme.rs  dist_clean.rs  doc.rs  docsrs.rs  exec.rs  fmt.rs  lint.rs  pre_release.rs  rdme.rs  sync_rdme.rs  test.rs  tidy.rs  udeps.rs
src/workspace/: metadata.rs  package.rs
tests/: build_example.rs
xtask/: Cargo.toml  README.md
xtask/src/: build.rs  clippy.rs  exec.rs  fmt.rs  lint.rs  lint_doc.rs  main.rs  pre_release.rs  rdme.rs  test.rs  tidy.rs  tidy_doc.rs  udeps.rs  util.rs  xtask_test.rs
