[workspace]
members = ["xtask"]

[package]
name = "cli-xtask"
version = "0.1.0-alpha.0"
edition = "2021"
rust-version = "1.60.0"
description = "xtask workflow collection for cli application"
readme = "README.md"
repository = "https://github.com/gifnksm/cli-xtask"
license = "MIT OR Apache-2.0"
keywords = []
categories = []

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = []

bin-crate = [
    "command-build",
    "command-clippy",
    "command-dist-build-bin",
    "command-dist-build-completion",
    "command-dist-build-doc",
    "command-dist-build-license",
    "command-dist-build-man",
    "command-dist-build-readme",
    "command-dist-clean",
    "command-dist",
    "command-fmt",
    "command-test",
]
bin-crate-extra = [
    "bin-crate",
    "command-rdme",
]
lib-crate = [
    "command-build",
    "command-clippy",
    "command-fmt",
    "command-test",
]
lib-crate-extra = [
    "lib-crate",
    "command-rdme",
]

main = ["logger", "error-handler"]
logger = ["dep:tracing-subscriber"]
error-handler = ["dep:color-eyre"]

archive = ["dep:flate2", "dep:tar"]
cargo = []

command-build = ["dep:clap"]
command-clippy = ["dep:clap"]
command-dist-archive = ["archive", "dep:clap"]
command-dist-build-bin = ["cargo", "dep:clap"]
command-dist-build-completion = ["dep:clap", "dep:clap_complete"]
command-dist-build-doc = ["dep:clap"]
command-dist-build-license = ["dep:regex", "dep:clap"]
command-dist-build-man = ["dep:clap", "dep:clap_mangen", "dep:time"]
command-dist-build-readme = ["dep:clap"]
command-dist-clean = ["dep:clap"]
command-dist = ["command-dist-archive", "dep:clap"]
command-fmt = ["dep:clap"]
command-rdme = ["dep:clap"]
command-test = ["dep:clap"]

[dependencies]
cargo_metadata = "0.15.0"
clap = { version = "3.2.17", features = ["derive"], optional = true }
clap_complete = { version = "3.2.4", optional = true }
clap_mangen = { version = "0.1.10", optional = true }
color-eyre = { version = "0.6.2", optional = true }
eyre = "0.6.8"
flate2 = { version = "1.0.24", optional = true }
once_cell = "1.13.0"
regex = { version = "1.6.0", optional = true }
tar = { version = "0.4.38", optional = true }
time = { version = "0.3.13", optional = true }
tracing = "0.1.36"
tracing-subscriber = { version = "0.3.15", features = ["env-filter"], optional = true }
walkdir = "2.3.2"

[dev-dependencies]
assert_cmd = "2.0.4"

[build-dependencies]

[profile.dev]

[profile.release]

[badges]
maintenance = { status = "actively-developed" }
