[workspace]
members = ["xtask"]

[package]
name = "cli-xtask"
version = "0.1.0-alpha.0"
edition = "2021"
rust-version = "1.60.0"
description = "A collection of utility functions and command line interfaces for cargo-xtask"
readme = "README.md"
repository = "https://github.com/gifnksm/cli-xtask"
license = "MIT OR Apache-2.0"
keywords = []
categories = []
autobins = false

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = []

bin-crate = [
    "subcommand-build",
    "subcommand-clippy",
    "subcommand-dist-build-bin",
    "subcommand-dist-build-completion",
    "subcommand-dist-build-doc",
    "subcommand-dist-build-license",
    "subcommand-dist-build-man",
    "subcommand-dist-build-readme",
    "subcommand-dist-clean",
    "subcommand-dist",
    "subcommand-fmt",
    "subcommand-lint",
    "subcommand-test",
]
bin-crate-extra = [
    "bin-crate",
    "subcommand-rdme",
    "subcommand-udeps",
]
lib-crate = [
    "subcommand-build",
    "subcommand-clippy",
    "subcommand-fmt",
    "subcommand-lint",
    "subcommand-test",
]
lib-crate-extra = [
    "lib-crate",
    "subcommand-rdme",
    "subcommand-udeps",
]

main = ["logger", "error-handler"]

error-handler = ["dep:color-eyre"]
logger = ["dep:tracing-subscriber"]
archive = ["dep:flate2", "dep:tar"]

subcommand-build = []
subcommand-clippy = []
subcommand-dist = ["subcommand-dist-archive"]
subcommand-dist-archive = ["archive"]
subcommand-dist-build-bin = []
subcommand-dist-build-completion = ["dep:clap_complete"]
subcommand-dist-build-doc = []
subcommand-dist-build-license = ["dep:regex"]
subcommand-dist-build-man = ["dep:clap_mangen", "dep:time"]
subcommand-dist-build-readme = []
subcommand-dist-clean = []
subcommand-exec = []
subcommand-fmt = []
subcommand-lint = []
subcommand-rdme = []
subcommand-test = []
subcommand-udeps = []

[dependencies]
cargo_metadata = "0.15.0"
clap = { version = "3.2.17", features = ["derive"] }
clap_complete = { version = "3.2.4", optional = true }
clap_mangen = { version = "0.1.10", optional = true }
color-eyre = { version = "0.6.2", optional = true }
eyre = "0.6.8"
flate2 = { version = "1.0.24", optional = true }
once_cell = "1.13.1"
regex = { version = "1.6.0", optional = true }
tar = { version = "0.4.38", optional = true }
time = { version = "0.3.13", optional = true }
tracing = "0.1.36"
tracing-subscriber = { version = "0.3.15", features = ["env-filter"], optional = true }
walkdir = "2.3.2"

[dev-dependencies]

[build-dependencies]

[profile.dev]

[profile.release]

[badges]
maintenance = { status = "actively-developed" }
