[workspace]
members = ["xtask"]

[package]
name = "cli-xtask"
version = "0.10.1"
edition = "2021"
rust-version = "1.82.0"
description = "A collection of utility functions and command line interfaces for cargo-xtask"
readme = "README.md"
repository = "https://github.com/gifnksm/cli-xtask"
license = "MIT OR Apache-2.0"
keywords = []
categories = []

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

[package.metadata.cargo-sync-rdme.badge]
style = "flat-square"

[package.metadata.cargo-sync-rdme.badge.badges]
maintenance = true
license = { link = "#license" }
crates-io = true
docs-rs = true
rust-version = true
github-actions = { workflows = "ci.yml" }
codecov = true

[package.metadata.cargo-sync-rdme.rustdoc]
html-root-url = "https://docs.rs/cli-xtask/latest"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = []

bin-crate = [
    "subcommand-build",
    "subcommand-clippy",
    "subcommand-dist-build-bin",
    "subcommand-dist-build-completion",
    "subcommand-dist-build-doc",
    "subcommand-dist-build-license",
    "subcommand-dist-build-man",
    "subcommand-dist-build-readme",
    "subcommand-dist-clean",
    "subcommand-dist",
    "subcommand-fmt",
    "subcommand-lint",
    "subcommand-pre-release",
    "subcommand-test",
    "subcommand-tidy",
]
bin-crate-extra = [
    "bin-crate",
    "subcommand-sync-rdme",
    "subcommand-udeps",
]
lib-crate = [
    "subcommand-build",
    "subcommand-clippy",
    "subcommand-doc",
    "subcommand-docsrs",
    "subcommand-fmt",
    "subcommand-lint",
    "subcommand-pre-release",
    "subcommand-test",
    "subcommand-tidy",
]
lib-crate-extra = [
    "lib-crate",
    "subcommand-sync-rdme",
    "subcommand-udeps",
]

main = ["logger", "error-handler"]

error-handler = ["dep:color-eyre"]
logger = ["dep:tracing-subscriber"]
archive = ["dep:flate2", "dep:tar"]

subcommand-build = []
subcommand-clippy = []
subcommand-dist = ["subcommand-dist-archive"]
subcommand-dist-archive = ["archive"]
subcommand-dist-build-bin = []
subcommand-dist-build-completion = ["dep:clap_complete", "dep:clap_complete_nushell"]
subcommand-dist-build-doc = []
subcommand-dist-build-license = ["dep:regex"]
subcommand-dist-build-man = ["dep:chrono", "dep:clap_mangen", "clap/string"]
subcommand-dist-build-readme = []
subcommand-dist-clean = []
subcommand-doc = []
subcommand-docsrs = ["dep:serde", "dep:serde_json"]
subcommand-exec = []
subcommand-fmt = []
subcommand-lint = []
subcommand-pre-release = []
subcommand-sync-rdme = []
subcommand-test = []
subcommand-tidy = []
subcommand-udeps = []

[dependencies]
cargo_metadata = "0.19.2"
chrono = { version = "0.4.42", features = ["clock"], optional = true }
clap = { version = "4.5.48", features = ["derive"] }
clap-cargo = "0.15.2"
clap_complete = { version = "4.5.58", optional = true }
clap_complete_nushell = { version = "4.5.8", optional = true }
clap_mangen = { version = "0.2.29", optional = true }
color-eyre = { version = "0.6.5", optional = true }
eyre = "0.6.12"
flate2 = { version = "1.1.2", optional = true }
regex = { version = "1.11.3", optional = true }
serde = { version = "1.0.228", optional = true, features = ["derive"] }
serde_json = { version = "1.0.145", optional = true }
tar = { version = "0.4.44", optional = true }
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.20", features = ["env-filter"], optional = true }
walkdir = "2.5.0"

[dev-dependencies]

[build-dependencies]

[badges]
maintenance = { status = "passively-maintained" }
