[package]
name = "xtask"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
cargo_metadata = "0.15.0"
clap = { version = "3.2.17", features = ["derive"] }
cli-xtask = { path = "../", default-features = false }
color-eyre = "0.6.2"
eyre = "0.6.8"
tracing = "0.1.36"
tracing-subscriber = { version = "0.3.15", features = ["env-filter"] }
walkdir = "2.3.2"
