[package]
name = "xtask"
version = "0.1.0"
edition = "2021"
publish = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = "3.2.17"
cli-xtask = { path = "../../../", features = ["logger", "error-handler", "bin-crate", "bin-crate-extra"] }
eyre = "0.6.8"
app = { path = ".." }
